[gd_scene load_steps=14 format=3 uid="uid://st4wjqhyw6pc"]

[ext_resource type="Texture2D" uid="uid://nra2p7ynw8dc" path="res://Assets/Art/bricks.png" id="1_rfmpb"]
[ext_resource type="Script" path="res://Scripts/achievements.gd" id="1_v68qd"]
[ext_resource type="Texture2D" uid="uid://cr0iydjbgn7lt" path="res://Assets/Art/UI Buttons/cross_normal.png" id="2_n7m8m"]
[ext_resource type="Texture2D" uid="uid://vr46yilgcau" path="res://Assets/Art/Road.png" id="2_y250y"]
[ext_resource type="Texture2D" uid="uid://c3oii5mxhmg0h" path="res://Assets/Art/UI Buttons/cross_pressed.png" id="3_2hkcs"]
[ext_resource type="Texture2D" uid="uid://gg0kmkyx12a3" path="res://Assets/Art/UI Buttons/cross_hover.png" id="4_37n1j"]
[ext_resource type="FontFile" uid="uid://bgjbj7oq2nv44" path="res://Assets/SCG_FONT.ttf" id="5_d010d"]
[ext_resource type="Texture2D" uid="uid://bdpht5cynb0y6" path="res://Assets/Art/Misc.png" id="8_egf3l"]
[ext_resource type="Texture2D" uid="uid://deuarrdjqck0f" path="res://Assets/Art/Achievements.png" id="9_53kx1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hv4b"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucxov"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o1ham"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dooc"]
size = Vector2(15, 15)

[node name="Achievements" type="Node2D"]
script = ExtResource("1_v68qd")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 320.0
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("1_rfmpb")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 320.0
mouse_filter = 2
color = Color(0, 0, 0, 0.643137)

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 64.0
scale = Vector2(1.333, 1.333)
mouse_filter = 2
texture = ExtResource("2_y250y")
stretch_mode = 1

[node name="Top_Title" type="RichTextLabel" parent="."]
offset_left = 82.0
offset_top = 10.0
offset_right = 3402.0
offset_bottom = 470.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(1, 0.682353, 0.788235, 1)
theme_override_fonts/normal_font = ExtResource("5_d010d")
theme_override_font_sizes/normal_font_size = 256
text = "Achievements"

[node name="menu" type="TextureButton" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 24.0
offset_bottom = 24.0
scale = Vector2(1.5, 1.5)
mouse_filter = 1
texture_normal = ExtResource("2_n7m8m")
texture_pressed = ExtResource("3_2hkcs")
texture_hover = ExtResource("4_37n1j")

[node name="Box" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Box"]
offset_left = 60.0
offset_top = 100.0
offset_right = 180.0
offset_bottom = 120.0
color = Color(1, 0.682353, 0.788235, 1)

[node name="ColorRect2" type="ColorRect" parent="Box"]
offset_left = 20.0
offset_top = 120.0
offset_right = 220.0
offset_bottom = 220.0
color = Color(1, 0.682353, 0.788235, 1)

[node name="TTL" type="Sprite2D" parent="Box"]
position = Vector2(64, 103)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 6

[node name="TTM" type="Sprite2D" parent="Box"]
position = Vector2(120, 103)
scale = Vector2(6, 1)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 7

[node name="TTR" type="Sprite2D" parent="Box"]
position = Vector2(176, 103)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 8

[node name="TL" type="Sprite2D" parent="Box"]
position = Vector2(24, 123)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 6

[node name="TM" type="Sprite2D" parent="Box"]
position = Vector2(120, 123)
scale = Vector2(11, 1)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 7

[node name="TM2" type="Sprite2D" parent="Box"]
position = Vector2(63, 109)
rotation = -1.5708
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 7

[node name="TM3" type="Sprite2D" parent="Box"]
position = Vector2(177, 109)
rotation = -1.5708
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 19

[node name="TR" type="Sprite2D" parent="Box"]
position = Vector2(216, 123)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 8

[node name="LS" type="Sprite2D" parent="Box"]
position = Vector2(23, 170.656)
rotation = 1.5708
scale = Vector2(4.95694, 1)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 19

[node name="LS2" type="Sprite2D" parent="Box"]
position = Vector2(23, 141.817)
rotation = -1.5708
scale = Vector2(1.35216, 1)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 7

[node name="RS" type="Sprite2D" parent="Box"]
position = Vector2(217, 170.014)
rotation = -1.5708
scale = Vector2(4.8768, 1)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 19

[node name="BL" type="Sprite2D" parent="Box"]
position = Vector2(24, 217)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 18

[node name="BM" type="Sprite2D" parent="Box"]
position = Vector2(120, 217)
scale = Vector2(11, 1)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 19

[node name="BR" type="Sprite2D" parent="Box"]
position = Vector2(216, 217)
texture = ExtResource("8_egf3l")
hframes = 12
vframes = 4
frame = 20

[node name="Box_Name" type="RichTextLabel" parent="."]
offset_left = 61.0
offset_top = 98.0
offset_right = 2441.0
offset_bottom = 558.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(0.0666667, 0.0156863, 0.27451, 1)
theme_override_fonts/normal_font = ExtResource("5_d010d")
theme_override_font_sizes/normal_font_size = 256
text = "Name"

[node name="Box_Contents" type="RichTextLabel" parent="."]
offset_left = 22.0
offset_top = 121.0
offset_right = 3962.0
offset_bottom = 2081.0
scale = Vector2(0.05, 0.05)
mouse_filter = 2
theme_override_colors/default_color = Color(0.0666667, 0.0156863, 0.27451, 1)
theme_override_fonts/normal_font = ExtResource("5_d010d")
theme_override_font_sizes/normal_font_size = 256
text = "Name"

[node name="Achieve_Icon" type="Node2D" parent="."]
position = Vector2(120, 60)
scale = Vector2(2, 2)

[node name="Achieve_Win" type="Sprite2D" parent="Achieve_Icon"]
position = Vector2(-45, 8)
texture = ExtResource("9_53kx1")
hframes = 6
vframes = 10
frame = 42

[node name="Achieve_Deflect" type="Sprite2D" parent="Achieve_Icon"]
position = Vector2(-15, 8)
texture = ExtResource("9_53kx1")
hframes = 6
vframes = 10
frame = 48

[node name="Achieve_Root" type="Sprite2D" parent="Achieve_Icon"]
position = Vector2(15, 8)
texture = ExtResource("9_53kx1")
hframes = 6
vframes = 10
frame = 54

[node name="Achieve_Health" type="Sprite2D" parent="Achieve_Icon"]
position = Vector2(45, 8)
texture = ExtResource("9_53kx1")
hframes = 6
vframes = 10
frame = 30

[node name="win" type="Area2D" parent="Achieve_Icon"]
position = Vector2(-45, 8)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Achieve_Icon/win"]
shape = SubResource("RectangleShape2D_3hv4b")

[node name="deflect" type="Area2D" parent="Achieve_Icon"]
position = Vector2(-15, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Achieve_Icon/deflect"]
shape = SubResource("RectangleShape2D_ucxov")

[node name="root" type="Area2D" parent="Achieve_Icon"]
position = Vector2(15, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Achieve_Icon/root"]
shape = SubResource("RectangleShape2D_o1ham")

[node name="health" type="Area2D" parent="Achieve_Icon"]
position = Vector2(45, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Achieve_Icon/health"]
shape = SubResource("RectangleShape2D_6dooc")

[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="mouse_entered" from="Achieve_Icon/win" to="." method="_on_win_mouse_entered"]
[connection signal="mouse_exited" from="Achieve_Icon/win" to="." method="_on_win_mouse_exited"]
[connection signal="mouse_entered" from="Achieve_Icon/deflect" to="." method="_on_deflect_mouse_entered"]
[connection signal="mouse_exited" from="Achieve_Icon/deflect" to="." method="_on_deflect_mouse_exited"]
[connection signal="mouse_entered" from="Achieve_Icon/root" to="." method="_on_root_mouse_entered"]
[connection signal="mouse_exited" from="Achieve_Icon/root" to="." method="_on_root_mouse_exited"]
[connection signal="mouse_entered" from="Achieve_Icon/health" to="." method="_on_health_mouse_entered"]
[connection signal="mouse_exited" from="Achieve_Icon/health" to="." method="_on_health_mouse_exited"]
